CNTRL-lightbox: thumbnails align+scale+opacity fix, offset structure change

--- a/src/Components/Lightbox/LightBox.module.scss
+++ b/src/Components/Lightbox/LightBox.module.scss
@@ -72,6 +72,9 @@
 .caption {
   position: absolute;
   display: flex;
+  &:hover {
+    color: var(--link-hover-color) !important;
+  }
 }
 
 .lightboxSplide:global(.splide),
